# SpaceInvaders

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Color.cpp  Color.h  Game.cpp  Game.h  GameConstants.cpp  GameConstants.h  Settings.cpp  Settings.h  main.cpp  moveFiles.ps1  settings.conf  settings.json
AssetLoaders/: FontLoader.cpp  FontLoader.h
AssetLoaders/Audio/: AudioClip.h  AudioLoader.cpp  AudioLoader.h  Music.h
AssetLoaders/Sprites/: Sprite.cpp  Sprite.h  SpriteLoader.cpp  SpriteLoader.h  SpriteMap.cpp  SpriteMap.h
Assets/Sprites/: Background.png~  Live.kra
Assets/Sprites/Player/: Player.png~
Controllers/: EnemyController.cpp  EnemyController.h  GameController.cpp  GameController.h  LevelController.cpp  LevelController.h
Events/: EventHandler.cpp  EventHandler.h  EventListener.cpp  EventListener.h
Factories/: Factory.cpp  Factory.h  UIFactory.cpp  UIFactory.h
GameObjects/: Alien.cpp  Alien.h  Bonus.cpp  Bonus.h  Bullet.cpp  Bullet.h  Bunker.cpp  Bunker.h  GameObject.cpp  GameObject.h  Player.cpp  Player.h
SFML/AssetLoaders/: SFMLFontLoader.cpp  SFMLFontLoader.h
SFML/AssetLoaders/Audio/: SFMLAudioClip.cpp  SFMLAudioClip.h  SFMLAudioLoader.cpp  SFMLAudioLoader.h  SFMLMusic.cpp  SFMLMusic.h
SFML/AssetLoaders/Sprites/: SFMLSprite.cpp  SFMLSprite.h  SFMLSpriteLoader.cpp  SFMLSpriteLoader.h
SFML/Factories/: SFMLFactory.cpp  SFMLFactory.h  SFMLUIFactory.cpp  SFMLUIFactory.h
SFML/UI/: SFMLText.cpp  SFMLText.h
SFML/Utils/: SFMLTimer.cpp  SFMLTimer.h
SFML/Window/: SFMLWindow.cpp  SFMLWindow.h
Scenes/: GameOverScene.cpp  GameOverScene.h  GameScene.cpp  GameScene.h  LoadScene.cpp  LoadScene.h  MenuScene.cpp  MenuScene.h  Scene.cpp  Scene.h
Sdl/AssetLoaders/: SDLFontLoader.cpp  SDLFontLoader.h
Sdl/AssetLoaders/Audio/: SDLAudioClip.cpp  SDLAudioClip.h  SDLAudioLoader.cpp  SDLAudioLoader.h  SDLMusic.cpp  SDLMusic.h
Sdl/AssetLoaders/Sprites/: SDLSprite.cpp  SDLSprite.h  SDLSpriteLoader.cpp  SDLSpriteLoader.h  SDLText.cpp  SDLText.h
Sdl/Factories/: SDLFactory.cpp  SDLFactory.h  SDLUIFactory.cpp  SDLUIFactory.h
Sdl/UI/: SDLText.cpp  SDLText.h
Sdl/Utils/: SDLTimer.cpp  SDLTimer.h
Sdl/Window/: SDLWindow.cpp  SDLWindow.h
UI/: Button.cpp  Button.h  Text.cpp  Text.h  UIComponent.cpp  UIComponent.h
Utils/: FunctionDefinitions.h  JsonFile.cpp  JsonFile.h  Math.cpp  Math.h  Random.cpp  Random.h  Timer.cpp  Timer.h
Windows/: Window.cpp  Window.h
texturepacks/default/Sprites/: Background.kra  Background.kra~  Button.kra
texturepacks/default/Sprites/Bunkers/: .Bunkers.kra-autosave.kra  Bunker1.png~  Bunker5.png~  Bunkers.kra  Bunkers.kra~
texturepacks/default/Sprites/Enemies/: Enemy1.kra  Enemy1.kra~
texturepacks/default/Sprites/Player/: Player.kra~
texturepacks/other/Sprites/: Background.kra
texturepacks/other/Sprites/Enemies/: Bonus.kra  Bullet.kra
